# tranche-pricing-paris

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: fair_coupons.csv  insurance_comparison.csv  results.csv  results_meta.json  sensitivity_pd_annual.csv  sensitivity_rho.csv  stress_results.csv
config/: default.yaml  paris_intermediate.yaml  stress_covid.yaml  stress_gfc.yaml  stress_rates2022.yaml
dashboard/: app.py
dashboard/pages/: 02_Scenario_Builder.py  03_Tranche_Pricer.py  04_Stress_Lab.py  05_Backtest_Replay.py
data/: DATA_SOURCES.md
data/processed/: calibrated_params.yaml
data/raw/: _provenance.json  case_shiller_us.csv  ecb_yield_10y.csv  ff_europe_3factors.csv  insee_irl.csv  insee_unemployment.csv  notaires_paris.csv  oat_10y.csv  visale.csv
notebooks/: 01_data_acquisition.ipynb  02_calibration.ipynb  03_models_ABC.ipynb  04_tranche_pricing.ipynb  05_stress_and_sensitivity.ipynb
report/: .latexmkrc  bibliography.bib  build_tables.py  main.tex  preamble.tex
report/sections/: 00_abstract.tex  01_introduction.tex  02_models.tex  03_dynamics.tex  04_credit.tex  05_waterfall.tex  06_insurance.tex  07_risk.tex  08_monte_carlo.tex  09_results.tex  09bis_stress.tex  10_discussion.tex  11_conclusion.tex  12_appendix_data.tex  13_appendix_architecture.tex  14_appendix_cheatsheet.tex  15_appendix_reproducibility.tex
report/tables/: calibrated_params.tex  fair_coupons.tex  headline_results.tex  insurance_comparison.tex  stress_results.tex  values.tex
src/tranche_pricing/: __init__.py  cli.py  config.py
src/tranche_pricing/calibration/: __init__.py  _types.py  bootstrap.py  cox_calibrate.py  mle_gbm.py  mle_jump.py  mle_vasicek.py  runner.py
src/tranche_pricing/credit/: __init__.py  _types.py  cox_intensity.py  gaussian_copula.py  lgd.py  student_t_copula.py
src/tranche_pricing/data/: __init__.py  _fred.py  _http.py  _insee_sdmx.py  cache.py  ecb.py  fama_french.py  fred.py  insee_irl.py  insee_unemployment.py  notaires.py  oat.py  visale.py
src/tranche_pricing/insurance/: __init__.py  actuarial.py  option_theoretic.py
src/tranche_pricing/markets/: __init__.py  price_gbm.py  price_jump.py  rates_vasicek.py
src/tranche_pricing/pricing/: __init__.py  instruments.py  model_compare.py  runner.py  sensitivity.py  stress.py  tranche_pricer.py
src/tranche_pricing/risk/: __init__.py  metrics.py
src/tranche_pricing/simulation/: __init__.py  engine.py  qmc.py  seeds.py
src/tranche_pricing/viz/: __init__.py  figures.py  style.py
src/tranche_pricing/waterfall/: __init__.py  andersen_sidenius.py  loss_paths.py  tranches.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_bootstrap.py  test_calibration_fitresult.py  test_config.py  test_cox_calibrate.py  test_credit_cox.py  test_credit_gaussian.py  test_credit_lgd.py  test_credit_student_t.py  test_data_cache.py  test_data_fetchers.py  test_data_parsing.py  test_engine.py  test_figures.py  test_insurance_option_theoretic.py  test_markets_gbm.py  test_markets_jump.py  test_markets_vasicek.py  test_pricing.py  test_pricing_tranche_reconstruct.py  test_risk_metrics.py  test_style.py  test_waterfall_run.py  test_waterfall_tranches.py
