[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tranche-pricing-paris"
version = "0.1.0"
description = "Multi-model tranche pricing on Paris residential rental cash flows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dan Allouche" }]
keywords = [
    "quantitative-finance",
    "credit-risk",
    "cdo",
    "tranche-pricing",
    "real-estate",
    "monte-carlo",
    "copula",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "statsmodels>=0.14",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "requests>=2.31",
    "pandas-datareader>=0.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32",
]
notebooks = [
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
    "nbconvert>=7.16",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.99",
    "ruff>=0.4",
    "mypy>=1.9",
    "nbstripout>=0.7",
    "types-PyYAML",
    "types-requests",
]
all = [
    "tranche-pricing-paris[dashboard,notebooks,dev]",
]

[project.scripts]
tranche-cli = "tranche_pricing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tranche_pricing"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "artifacts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
]
ignore = [
    "E501",   # line length (we already cap at 100)
    "N803",   # allow ALL_CAPS args in math code (e.g. R, M, T)
    "N806",   # allow uppercase locals (math variables)
    "RUF001", # en-dash in academic citations is intentional
    "RUF002", # same, in docstrings
    "RUF003", # multiplication sign in math comments is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]
"dashboard/**" = ["N802", "E402"]  # E402: sys.path insert before imports is intentional

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["notebooks", "data", "artifacts", "build", "dist"]

[[tool.mypy.overrides]]
module = ["scipy.*", "statsmodels.*", "pandas_datareader.*", "joblib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tranche_pricing",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: end-to-end pipeline tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/tranche_pricing"]
omit = ["*/cli.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
